deployments/image-store-api-gateway/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: albumservice
  labels:
    app: albumservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: albumservice
  template:
    metadata:
      labels:
        app: albumservice
    spec:
      securityContext:
        runAsUser: 1001 # run as non-root user (container level)
        fsGroup: 1001
      containers:
        - name: albumservice
          image: IMAGE_NAME
          ports:
            - containerPort: PORT
          resources:
            limits:
              memory: "1000Mi"
              cpu: "1000m"
          securityContext:
            allowPrivilegeEscalation: false # drop privilege escalation
            privileged: false # run as non-privileged container (pod level)

---
apiVersion: v1
kind: Service
metadata:
  name: albumservice
  labels:
    app: albumservice
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: albumservice
